--- a/listdetail.html
+++ b/listdetail.html
@@ -48,7 +48,7 @@
             <div class="menu_space"></div>
             <footer class="menu_title menu_footer">
                 <div class="menu_footers">
-                    <a href="contentParametresRecommencer.html"><img src="images/mdi_settings.svg" alt=""></a>
+                    <a href="parametres.html"><img src="images/mdi_settings.svg" alt=""></a>
                     <p class="footer_text">Paramètres</p>
                 </div>
                 <div class="menu_footers logout">
